# Vault

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1776230498880-c01068eb065ad.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  auth.rs  crypto.rs  email.rs  lib.rs  main.rs  watcher.rs
vault-frontend/: package-lock.json  package.json
vault-frontend/src-tauri/: Cargo.toml  tauri.conf.json
vault-frontend/src-tauri/src/: main.rs
