[package]
name = "vault"
version = "1.0.0"
description = "File encryption and activity tracking"
authors = ["Vault"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
notify = { version = "6", features = ["macos_kqueue"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
walkdir = "2"
zip = "2.4"
argon2 = "0.5"
rand_core = "0.6"
dotenv = "0.15"
