[package]
name = "vault-frontend"
version = "0.1.0"
description = "Vault - File Encryption & Activity Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "vault_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# File watching
notify = "6"

# USB keys
rusb = "0.9"

# Email
lettre = "0.11"

# Audit log
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HMAC for audit integrity
hmac = "0.12"
sha2 = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"